--- a/WinUIEditWinUI3Demo/WinUIEditWinUI3Demo.csproj
+++ b/WinUIEditWinUI3Demo/WinUIEditWinUI3Demo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows10.0.22621.0</TargetFramework>
@@ -38,6 +38,9 @@
   -->
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
     <ProjectCapability Include="Msix" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Deps\WinUIEdit\MicaEditor\MicaEditor.vcxproj" />
   </ItemGroup>
 
   <!-- 
